--- a/main.html
+++ b/main.html
@@ -8,6 +8,62 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1 style="text-align:center;">Job Application Form</h1>
+
+    <form method="post">
+        <div class="form-group">
+            <label for="name">Name *</label>
+            <input type="text" id="name" required>
+        </div>
+
+        <div class="form-group">
+            <label for="email">Email *</label>
+            <input type="email" id="email" required>
+        </div>
+
+        <div class="form-group">
+            <label>Gender *</label>
+            <div class="radio-group">
+                <label><input type="radio" name="gender" value="male" required> Male</label>
+                <label><input type="radio" name="gender" value="female" required> Female</label>
+                <label><input type="radio" name="gender" value="other" required> Other</label>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="laptop">Laptop Brands</label>
+            <select id="laptop">
+                <option value="">--Select a brand--</option>
+                <option value="Apple">Apple</option>
+                <option value="Asus">Asus</option>
+                <option value="HP">HP</option>
+            </select>
+        </div>
+
+        <div class="form-group">
+            <label for="age">Age *</label>
+            <input type="number" id="age" required>
+        </div>
+
+        <div class="form-group">
+            <label for="dob">Date of Birth *</label>
+            <input type="date" id="dob" required>
+        </div>
+
+        <div class="form-group">
+            <label for="password">Password *</label>
+            <input type="password" id="password" required>
+        </div>
+
+        <div class="form-group">
+            <label for="portfolio">Portfolio URL</label>
+            <input type="url" id="portfolio">
+        </div>
+
+        <div class="form-group">
+            <button type="submit">Submit</button>
+        </div>
+    </form>
     <script type="text/javascript" src="./script.js">
 </script>
 
